--- a/test/fixtures/expected.css
+++ b/test/fixtures/expected.css
@@ -2,16 +2,14 @@
  * External comment
  */
 
+
+
 :root {
   /* comment inside ruleset */
-  var-border: 5px solid red;
-  var-color: #fff;
-  var-start-color: #111;
-  var-end-color: #222;
 }
 
 .test {
   background: linear-gradient(to top, #111, #222);
-  border: 5px solid red;
-  color: #fff;
+  border: 5px solid red !important;
+  color: #fff !important;
 }
