--- a/test/fixtures/original.css
+++ b/test/fixtures/original.css
@@ -3,15 +3,19 @@
  */
 
 :root {
+  var-dummy: 1;
+}
+
+:root {
   /* comment inside ruleset */
   var-border: 5px solid red;
-  var-color: #fff;
+  var-color: #fff !important;
   var-start-color: #111;
   var-end-color: #222;
 }
 
 .test {
   background: linear-gradient(to top, var(start-color), var(end-color));
-  border: var(border);
+  border: var(border) !important;
   color: var(color);
 }
