--- a/test/fixtures/case-sensitive.css
+++ b/test/fixtures/case-sensitive.css
@@ -1,9 +1,9 @@
 :root {
-  var-TEST-color: red;
-  var-tESt-COLOR: green;
+  --TEST-color: red;
+  --tESt-COLOR: green;
 }
 
 div {
-  color: var(TEST-color);
-  color: var(tESt-COLOR);
+  color: var(--TEST-color);
+  color: var(--tESt-COLOR);
 }
