--- a/test/fixtures/substitution-fallback.css
+++ b/test/fixtures/substitution-fallback.css
@@ -1,20 +1,20 @@
 :root {
-  var-nested: green;
+  --nested: green;
 }
 
 div {
   /* simple fallback */
-  color: var(missing, green);
+  color: var(--missing, green);
   /* comma-separated fallback */
-  color: var(missing, green, blue);
+  color: var(--missing, green, blue);
   /* fallback is a function */
-  background: var(missing, linear-gradient(to top, #000, #111));
+  background: var(--missing, linear-gradient(to top, #000, #111));
   /* fallback is a function containing a function */
-  background: var(missing, linear-gradient(to top, #000, rgba(0, 0, 0, 0.5)));
+  background: var(--missing, linear-gradient(to top, #000, rgba(0, 0, 0, 0.5)));
   /* fallback contains a defined variable */
-  background: var(missing, var(nested));
+  background: var(--missing, var(--nested));
   /* fallback contains a defined variable within a function */
-  background: var(missing, linear-gradient(to top, #000, var(nested)));
+  background: var(--missing, linear-gradient(to top, #000, var(--nested)));
   /* fallback contains an undefined variable with a fallack */
-  background: var(missing, var(also-missing, green));
+  background: var(--missing, var(--also-missing, green));
 }
