Add new regression test cases

--- a/test/fixtures/substitution-defined.css
+++ b/test/fixtures/substitution-defined.css
@@ -21,6 +21,8 @@ div {
   color: var(--test-one) !important;
   /* multiple variables */
   color: var(--test-one), var(--test-two);
+  /* variable with function in fallback */
+  border: var(--test-one, 1px solid rgba(0, 0, 0, 0.1));
   /* multiple variables within a function */
   background: linear-gradient(to top, var(--test-one), var(--test-two));
 }
