--- a/test/fixtures/substitution-defined.out.css
+++ b/test/fixtures/substitution-defined.out.css
@@ -17,6 +17,8 @@ div {
   color: green !important;
   /* multiple variables */
   color: green, blue;
+  /* variable with function in fallback */
+  border: green;
   /* multiple variables within a function */
   background: linear-gradient(to top, green, blue);
 }
