--- a/test/fixtures/substitution-fallback.css
+++ b/test/fixtures/substitution-fallback.css
@@ -9,6 +9,8 @@ div {
   color: var(--missing, green, blue);
   /* fallback is a function */
   background: var(--missing, linear-gradient(to top, #000, #111));
+  /* fallback contains a function */
+  background: var(--missing, 1px solid rgba(0, 0, 0, 0.1));
   /* fallback is a function containing a function */
   background: var(--missing, linear-gradient(to top, #000, rgba(0, 0, 0, 0.5)));
   /* fallback contains a defined variable */
